fixed horizontal scroll

--- a/src/sass/layout/_menu-modal.scss
+++ b/src/sass/layout/_menu-modal.scss
@@ -23,7 +23,7 @@
     #4f2ee8 18.03%,
     #ffffff 100%
   );
-  overflow-y: hidden;
+  overflow: hidden;
 
   transform: translateY(-100%);
 
